fixed scrollbar

--- a/app/(pages)/_globals/globals.scss
+++ b/app/(pages)/_globals/globals.scss
@@ -225,6 +225,31 @@ button {
   }
 }
 
+@layer utilities {
+  .custom-scrollbar {
+    overflow-y: scroll; /* Ensures scrollbar is always visible */
+  }
+
+  /* Custom scrollbar for Webkit browsers (Chrome, Safari) */
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: var(--background-secondary);
+    border-radius: 10px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: var(--background-secondary);
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+  }
+}
+
+
 @keyframes rotateVinyl {
   100% {
     transform: translate(-50%, -51%) rotate(0deg);
